# mod-ollama-chat

./: CMakeLists.txt  README.md
data/sql/characters/updates/: 2025_08_01_add_rag_filters_table.sql  2025_08_02_add_summaries_table.sql
src/: mod-ollama-chat_command.cpp  mod-ollama-chat_command.h  mod-ollama-chat_config.cpp  mod-ollama-chat_config.h  mod-ollama-chat_handler.cpp  mod-ollama-chat_rag.cpp  mod-ollama-chat_rag.h
